<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NewTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNewTask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="New Task" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/task_title"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInpLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task_title"
            android:inputType="textCapWords"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/what_is_to_be_done"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskInpLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/enter_your_task"
            android:lines="3"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/set_reminder_date"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/date_range"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorAccent"
            android:focusable="false"
            android:hint="@string/set_date"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeInptLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/access_time"
            android:drawablePadding="8dp"
            android:drawableTint="@color/colorAccent"
            android:focusable="false"
            android:hint="@string/set_time"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerCaterogy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imgAddCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/playlist_add_black"
            android:tint="@color/colorAccent" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/save_task"
        app:cornerRadius="25dp" />

</LinearLayout>